# rapunzel

./: .gitignore  pyproject.toml  rapunzel  rapunzel.py  readme.md  release.sh  setup.py  stdeb.cfg
doc/: baseconf.py  build-menu.py  pelicanconf.py  publish.sh  publishconf.py  sitemap.yaml
doc/content/pages/: download.md  index.md
doc/plugins/: cogsci-preprocess.py
doc/static/: seo-sitemap.txt  sitemap.yml
mime/: rapunzel.desktop
opensesame_extensions/CommandPalette/: CommandPalette.py  info.json
opensesame_extensions/DataViewer/: DataViewer.py  datadockwidget.py  info.json
opensesame_extensions/DataViewer/data_viewer_file_handlers/: __init__.py  _ir_file_handler.py  _python_file_handler.py
opensesame_extensions/FindInFiles/: FindInFiles.py  find_in_files.ui  info.json
opensesame_extensions/GitGUI/: GitGUI.py  info.json
opensesame_extensions/IDELauncher/: IDELauncher.py  info.json
opensesame_extensions/ImageAnnotations/: ImageAnnotations.py  info.json  preferences.ui
opensesame_extensions/JupyterConsole/: JupyterConsole.py  info.json  preferences.ui
opensesame_extensions/JupyterNotebook/: JupyterNotebook.py  info.json  jupyter_widget.py  launch_jupyter_lab_widget.ui  preferences.ui
opensesame_extensions/OpenSesameIDE/: OpenSesameIDE.py  info.json  preferences.ui
opensesame_extensions/PythonDebugger/: PythonDebugger.py  info.json  rapunzel_pdb.py
opensesame_extensions/QuickSelector/: QuickSelector.py  info.json
opensesame_extensions/RapunzelLocale/: RapunzelLocale.py  de_DE.qm  de_DE.ts  fr_FR.qm  fr_FR.ts  info.json  tr_TR.qm  tr_TR.ts  translatables.ts  zh_CN.qm  zh_CN.ts
opensesame_extensions/RapunzelWelcome/: RapunzelWelcome.py  info.json  rapunzel_welcome.md
opensesame_extensions/SpellCheck/: SpellCheck.py  info.json  preferences.ui
opensesame_extensions/SubprocessManager/: SubprocessManager.py  info.json
opensesame_extensions/SymbolSelector/: SymbolSelector.py  info.json  preferences.ui
opensesame_extensions/WordCount/: WordCount.py  info.json
opensesame_extensions/WorkspaceExplorer/: WorkspaceExplorer.py  info.json
opensesame_extensions/ide/: __init__.py
snap/: build.sh
snap/snap/: snapcraft.yaml
snap/snap/gui/: rapunzel.desktop
snap/src/: lib.c
translation_tools/: translations.json
(+166 files in other folders)
